# tp_ri

./: CMakeLists.txt
src/: CMakeLists.txt  compressor.cc  compressor.h  inverted_index.cc  inverted_index.h  query_processor.cc  query_processor.h  term_document_frequency.cc  term_document_frequency.h
src/RICPlib/: CollectionReader.cpp  CollectionReader.h  CollectionWriter.h
src/util/: CMakeLists.txt  util.cc  util.h
test/: CMakeLists.txt  indexToCompressedColection.txt  index_constructor.h  pagesRICompressed0  test_reader.cc  teste
